--- a/src/public/dashboard.html
+++ b/src/public/dashboard.html
@@ -5,7 +5,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>   
     <script>
         $( document ).ready(function() {
-            console.log("document ready!" );
             $.ajax({
                 url: "/unconfirmed_transactions",
                 success: function( result ) {
@@ -19,7 +18,7 @@
 <body>
   <div id="content">
     <div id="head">
-        <img src="./img" alt="tyme icon" style="widows: 64px;;height:64px;"> 
+        <img src="./img" alt="tyme icon" style="widows: 64px;height:64px;"> 
         <span style="font-size: 22px;"> TYME Coin Dashboard</span>
     </div>
     <div id="body">
