--- a/src/public/wallet.html
+++ b/src/public/wallet.html
@@ -87,7 +87,7 @@
             <span>Balance: </span><span id="balance-value">0</span>  
         </div>
         <div id="reload-balance">
-                <button id="btn-balance" name="btn-balance" value="" onclick="getBalance();">Reload </button>
+                <button id="btn-balance" name="btn-balance" value="" onclick="getBalance();getTransactionHistory();">Reload </button>
             </div>
         <div>
             <span>From: </span><input id="fromAddress"/><br/>
