--- a/src/public/masterWallet.html
+++ b/src/public/masterWallet.html
@@ -28,6 +28,7 @@
                 url: "/createTransaction?fromAdd="+fromAdd+"&toAdd="+toAdd+"&amount="+amount+"&privateKey="+privateKey,
                 success: function( result ) {
                     getTransactionHistory();
+                    getBalance();
                 }
             });
         }
@@ -69,6 +70,10 @@
         <div id="balance">
             <span>Balance: </span><span id="balance-value">0</span>  
         </div>
+        <div id="reload-balance">
+                <button id="btn-balance" name="btn-balance" value="" onclick="getBalance();getTransactionHistory();">Reload </button>
+            </div>
+        <div>
         <div>
             <span>From: </span><input id="fromAddress" value="04be128292e3850bb1ec167835d8dae5be4cec21c38b5951a565205c0597a2f7cff12fcc2626e22769d084576f9267db0b3f3157c0b9382220ad47c21cd180fc8f" /><br/>
             <span>To: </span><input id="toAddress"/><br/>
