apply css styles for wallet.html page

--- a/src/public/wallet.html
+++ b/src/public/wallet.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Tyme Coin Wallet!</title>
+    <link rel="shortcut icon" href="https://media.licdn.com/dms/image/C4E0BAQGZI127XBiX0w/company-logo_200_200/0?e=2159024400&v=beta&t=t8hy0mHoFF2_hmwdZmrsaNPInPKzT5fpbrV8elVxuZ4">
+    <title>Tyme Coin Wallet</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>   
     <script>
         function generateKey(){
@@ -38,6 +39,7 @@
             let privateKey = $("#private-key").html();
 
             $.ajax({
+
                 url: "/createTransaction?fromAdd="+fromAdd+"&toAdd="+toAdd+"&amount="+amount+"&privateKey="+privateKey,
                 success: function( result ) {
                     getTransactionHistory();
@@ -73,42 +75,61 @@
 <body>
   <div id="content">
     <div id="head">
-        <img src="../" alt="Tyme header"> 
+        <img src="https://media.licdn.com/dms/image/C4E0BAQGZI127XBiX0w/company-logo_200_200/0?e=2159024400&v=beta&t=t8hy0mHoFF2_hmwdZmrsaNPInPKzT5fpbrV8elVxuZ4" width="30" height="30"/>
     </div>
     <div id="body">
-        <span>Tyme Coin Address: </span><br/>
-        <span id="public-key"></span><br/>
-        
-        <span id="private-key" style="display: none"></span>
-        <div id="generate-key">
-            <button id="btn-key" name="btn-key" value="Generate" onclick="generateKey();">Generate</button>
-        </div>
-        <div id="balance">
-            <span>Balance: </span><span id="balance-value">0</span>  
-        </div>
-        <div id="reload-balance">
-                <button id="btn-balance" name="btn-balance" value="" onclick="getBalance();getTransactionHistory();">Reload </button>
+        <h3>Generate Tyme Wallet</h3>
+        <div title="Generate Tyme Wallet" style="margin-top: 20px; padding: 10px; border: 1px solid gray">
+            <div id="generate-key">
+                <button id="btn-key" name="btn-key" value="Generate" onclick="generateKey();">Generate New Wallet</button>
             </div>
-        <div>
-            <span>From: </span><input id="fromAddress"/><br/>
-            <span>To: </span><input id="toAddress"/><br/>
-            <span>Amount: </span><input id="amount"/><br/>
-            <button onclick="sendCoin();">Submit</button>
+            <br/>
+            <span>Tyme Coin Address: </span><br/>
+            <span id="public-key"></span><br/>
+            <span id="private-key" style="display: none"></span>
+            <div id="balance">
+                <span>Balance: </span><span id="balance-value">0</span>
+            </div>
         </div>
-        <div id="transaction">
+
+        <h3>Send Transaction</h3>
+        <div title="Send Transaction" style="margin-top: 20px; padding: 10px; border: 1px solid gray">
+            <table style="border: 1px solid gray;">
+                <tr>
+                    <td>From:</td>
+                    <td><input id="fromAddress" size="50" style="color: gray"/></td>
+                </tr>
+                <tr>
+                    <td>To:</td>
+                    <td><input id="toAddress" size="50"/></td>
+                </tr>
+                <tr>
+                    <td>Amount:</td>
+                    <td><input id="amount" size="50"/></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><button onclick="sendCoin();">Send</button></td>
+                </tr>
+            </table>
+        </div>
+
+        <h3>Transaction History</h3>
+        <div id="transaction" title="Transaction History" style="margin-top: 20px; padding: 10px; border: 1px solid gray">
+            <div id="reload-balance">
+                <button id="btn-balance" name="btn-balance" value="" onclick="getBalance();getTransactionHistory();">Refresh</button>
+            </div>
+            <br>
             <table border="1">
                    <tr>
-                       <th>No</th>
-                       <th>From</th>
-                       <th>To</th>
-                       <th>Amount</th>
-                       <th>Date</th>
+                       <th style="width: 40px">No</th>
+                       <th style="width: 300px">From</th>
+                       <th style="width: 300px">To</th>
+                       <th style="width: 200px">Amount</th>
+                       <th style="width: 200px">Date</th>
                    </tr> 
-                   <tbody id="body-transaction">
-                  
-                </tbody>
+                   <tbody id="body-transaction"></tbody>
             </table>
-
         </div>
     </div>  
 
