apply css styles for masterWallet.html page

--- a/src/public/masterWallet.html
+++ b/src/public/masterWallet.html
@@ -66,7 +66,7 @@
     <div id="body">
         <h3>Master Tyme Wallet</h3>
         <div title="Generate Tyme Wallet" style="margin-top: 20px; padding: 10px; border: 1px solid gray">
-            <span>Tyme Coin Address: </span><br/>
+            <span>Tyme Coin Address: </span>
             <span id="public-key">04be128292e3850bb1ec167835d8dae5be4cec21c38b5951a565205c0597a2f7cff12fcc2626e22769d084576f9267db0b3f3157c0b9382220ad47c21cd180fc8f</span><br/>
             <span id="private-key" style="display: none">5970ca079d3a4b877e560f8f9f14233299c1b479a95ba1000bd421300bc6cfa5</span>
             <div id="balance">
