--- a/src/public/wallet.html
+++ b/src/public/wallet.html
@@ -84,7 +84,7 @@
                 <button id="btn-key" name="btn-key" value="Generate" onclick="generateKey();">Generate New Wallet</button>
             </div>
             <br/>
-            <span>Tyme Coin Address: </span><br/>
+            <span>Tyme Coin Address: </span>
             <span id="public-key"></span><br/>
             <span id="private-key" style="display: none"></span>
             <div id="balance">
