--- a/src/public/wallet.html
+++ b/src/public/wallet.html
@@ -75,7 +75,7 @@
 <body>
   <div id="content">
     <div id="head">
-        <img src="https://media.licdn.com/dms/image/C4E0BAQGZI127XBiX0w/company-logo_200_200/0?e=2159024400&v=beta&t=t8hy0mHoFF2_hmwdZmrsaNPInPKzT5fpbrV8elVxuZ4" width="30" height="30"/>
+        <img src="https://media.licdn.com/dms/image/C4E0BAQGZI127XBiX0w/company-logo_200_200/0?e=2159024400&v=beta&t=t8hy0mHoFF2_hmwdZmrsaNPInPKzT5fpbrV8elVxuZ4"/>
     </div>
     <div id="body">
         <h3>Generate Tyme Wallet</h3>
